@@ -33,6 +33,7 @@ setup(name = 'gfeedline',
                     ('share/gfeedline/html', 
                      [ 'share/html/default.css',
                        'share/html/base.html',
+                       'share/html/key.png',
                        'share/html/retweet.png',
                        'share/html/gfeedline.js',
                        'share/html/scrollsmoothly.js', ]),
