@@ -5,5 +5,6 @@
   <a href='gfeedline://twitter.com/$user_name/status/$id'
      style='color: #$user_color;' class='username'
      title='$full_name'>$user_name</a>
+  $protected
   <span class='body'>$status_body</span>
 </div>
