@@ -11,6 +11,7 @@
       <a href='gfeedline://twitter.com/$user_name/status/$id'
          style='color: #$user_color;' class='username' 
          title='$full_name'>$user_name</a>
+      $protected
     </div>
     <div class='body'>$status_body</div>
     <div class='datetime'>($date_time)</div>
